# FSM

./: .gitignore  CMakeLists.txt  README.md  main.c
fsm/: CMakeLists.txt  fsm.c  fsm.h
